dettagli dei verbali

--- a/Esterni/Verbali/VE_17-03-23.tex
+++ b/Esterni/Verbali/VE_17-03-23.tex
@@ -26,9 +26,9 @@
 
 Argomenti discussi con il \GP:
 \begin{enumerate}
-	\item Abbiamo esposto al \GP{} lo stato di avanzamento del prodotto e gli abbiamo sintetizzato le principali scelte progettuali di alto livello.
-	\item Abbiamo discusso della difficoltà di implementare la funzionalità di “visibilità automatica” delle variabili nei diagrammi di attività; il \GP{} ci ha fatto notare l'importanza di questa funzionalità ma, riconoscendone la complessità di implementazione, ci ha proposto di gestire la visibilità solo \emph{parzialmente}. Abbiamo accettato la sua proposta.
-	\item Abbiamo spiegato al \GP{} il compromesso adottato tra estensibilità dell'applicazione e sua immediata ricchezza di funzionalità.
+	\item \textbf{stato di avanzamento} --- Abbiamo esposto al \GP{} lo stato di avanzamento del prodotto e gli abbiamo sintetizzato le principali scelte progettuali di alto livello.
+	\item \textbf{visibilità automatica delle variabili} --- Abbiamo discusso della difficoltà di implementare la funzionalità di “visibilità automatica” delle variabili nei diagrammi di attività; il \GP{} ci ha fatto notare l'importanza di questa funzionalità ma, riconoscendone la complessità di implementazione, ci ha proposto di gestire la visibilità solo \emph{parzialmente}. Abbiamo accettato la sua proposta.
+	\item \textbf{funzionalità} --- Abbiamo spiegato al \GP{} il compromesso adottato tra estensibilità dell'applicazione e sua immediata ricchezza di funzionalità.
 \end{enumerate}
 
 \end{document}
