--- a/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
@@ -71,7 +71,15 @@ Di seguito descriviamo come utilizzare \proj{} per progettare e generare un'appl
 
 \subsection{Interfaccia grafica} \label{sec:gui}
 
-Vi viene subito presentato un diagramma delle classi vuoto, sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro.
+Vi viene subito presentato un diagramma delle classi vuoto, come in figura \ref{fig:screen} sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro.
+
+% screenshot index.html
+\begin{figure}
+\centering
+	\includegraphics[scale=0.46]{screen_index_2}
+	\caption{Interfaccia grafica.}
+	\label{fig:screen}
+\end{figure}
 
 
 
