--- a/Esterni/Specifica_tecnica/diario.tex
+++ b/Esterni/Specifica_tecnica/diario.tex
@@ -2,10 +2,14 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	2.0.0 & {\MM} (Responsabile) & 10/04/2017 & Approvazione documento \\ \hline
+	1.1.0 & {\AZ} (Verificatore) & 10/04/2017 & Verifica sezioni aggiornate \\ \hline
+	1.0.2 & {\MM} (Progettista) & 28/03/2017 & Revisione appendice \ref{app:app_creaz} e diagrammi sez. \ref{sec:frontend} \\ \hline
+	1.0.1 & {\GG} (Progettista) & 24/03/2017 & Revisione sezione \ref{sec:arch_server} \\ \hline
 	1.0.0 & {\GG} (Responsabile) & 27/02/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 27/02/2017 & Verifica documento \\ \hline
-	0.0.16 & {\PB} (Progettista) & 24/02/2017 & Stesura Appendici JointJS, Architetura Backbone e Design Pattern\\ \hline
-	0.0.15 & {\PB} (Progettista) & 23/02/2017 & Stesura sezione Tracciamento, Tracciamento Classi-Requisiti e Tracciamento Requisiti-Classe\\ \hline
+	0.0.16 & {\PB} (Progettista) & 24/02/2017 & Stesura Appendici JointJS, Architetura Backbone e Design Pattern \\ \hline
+	0.0.15 & {\PB} (Progettista) & 23/02/2017 & Stesura sezione Tracciamento, Tracciamento Classi-Requisiti e Tracciamento Requisiti-Classe \\ \hline
 	0.0.14 & {\GG} (Progettista) & 22/02/2017 & Stesura SWEDesigner::Server::Stereotype, SWEDesigner::Server::Template, SWEDesigner::Server::Template::Template, SWEDesigner::Server::Template::TemplateAssembler, SWEDesigner::Server::Template::Java, SWEDesigner::Server::Template::JavaTemplate, SWEDesigner::Server::Utility e SWEDesigner::Server::Utility::Compressor \\ \hline
 	0.0.13 & {\AZ} (Progettista) & 20/02/2017 & Stesura SWEDesigner::Server::Project::ParsedFor, SWEDesigner::Server::Project::ParsedIf, SWEDesigner::Server::Project::ParsedWhile, SWEDesigner::Server::Project::ParsedInitialize, SWEDesigner::Server::Project::ParsedReturn, SWEDesigner::Server::Project::ParsedMethod, SWEDesigner::Server::Project::ParsedInstruction, SWEDesigner::Server::Project::ParsedInterface, SWEDesigner::Server::Project::ParsedProgram e SWEDesigner::Server::Project::ParsedType \\ \hline
 	0.0.12 & {\AZ} (Progettista) & 18/02/2017 & Stesura SWEDesigner::Server::Project, SWEDesigner::Server::Project::ParsedAssignment, SWEDesigner::Server::Project::ParsedCustom, SWEDesigner::Server::Project::ParsedElement, SWEDesigner::Server::Project::ParsedAttribute e SWEDesigner::Server::Project::ParsedClass\\ \hline
