--- a/Esterni/Specifica_tecnica/Specifica_tecnica_2_0_0.tex
+++ b/Esterni/Specifica_tecnica/Specifica_tecnica_2_0_0.tex
@@ -3,7 +3,7 @@
 
 \input{../../util/hx-ambiente}
 
-\version{1.0.0}
+\version{2.0.0}
 \creaz{15 febbraio 2017}
 \author{\ALL}
 \supervisor{\MM}
@@ -51,10 +51,10 @@
 % ---> distinguere STRUTTURA (classi) da COMPORTAMENTO (procedure)?
 % - diagrammi delle classi
 % - se serve, qualche diagramma di attività/sequenza
-\section{Classi e componenti del \emph{front end}}
+\section{Componenti del \emph{front end}} \label{sec:frontend}
 \input{tex/packageClassiST-FE}
 
-\section{Classi e componenti del \emph{back end}}
+\section{Componenti del \emph{back end}} \label{sec:backend}
 \input{tex/packageClassiST-BE}
 
 % JSON, client-server... ???
