--- a/Esterni/Specifica_tecnica/diario.tex
+++ b/Esterni/Specifica_tecnica/diario.tex
@@ -4,7 +4,7 @@
 \begin{diario}
 	2.0.0 & {\MM} (Responsabile) & 10/04/2017 & Approvazione documento \\ \hline
 	1.1.0 & {\AZ} (Verificatore) & 10/04/2017 & Verifica sezioni aggiornate \\ \hline
-	1.0.2 & {\MM} (Progettista) & 28/03/2017 & Revisione appendice \ref{app:app_creaz} e diagrammi sez. \ref{sec:frontend} \\ \hline
+	1.0.2 & {\MM} (Progettista) & 28/03/2017 & Revisione appendice \ref{sec:app_creaz} e diagrammi sez. \ref{sec:frontend} \\ \hline
 	1.0.1 & {\GG} (Progettista) & 24/03/2017 & Revisione sezione \ref{sec:arch_server} \\ \hline
 	1.0.0 & {\GG} (Responsabile) & 27/02/2017 & Approvazione documento \\ \hline
 	0.1.0 & {\MM} (Verificatore) & 27/02/2017 & Verifica documento \\ \hline
