--- a/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
+++ b/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
@@ -30,7 +30,15 @@ Questo package contiene le classi necessarie a trasformare l'oggetto che rappres
 Questo package contiene le componenti secondarie necessarie al server, indipendentemente dal linguaggio target dell'applicazione.
 \end{itemize}
 \end{itemize}
-
+\subsubsection{Classi}
+\subsubsubsection{\nogloxy{swedesigner::server::Application}}
+\label{\nogloxy{swedesigner::server::Application}}
+\begin{itemize}
+\item \textbf{Descrizione}\\
+Classe principale che consente l'avvio dell'applicazione spring.
+\item \textbf{Utilizzo}\\
+La classe viene utilizzata per avviare l'applicazione spring
+\end{itemize}
 \subsection{\nogloxy{swedesigner::server::compiler}}
 \label{\nogloxy{swedesigner::server::compiler}}
 \subsubsection{Informazioni generali}
@@ -59,29 +67,9 @@ questa interfaccia si occupa di fornire un oggetto compiler generico a chi lo ri
 \textt{RequestHandlerController} ha una dipendenza verso \texttt{Compiler} in quanto chiederà a \textt{CompilerAssembler} una implementazione concreta di un \textt{Compiler} in base al linguaggio target. Il pattern realizzato con questa classe è una \emph{dependency injection}.
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::compiler::CompilerAssembler}]{\nogloxy{\texttt{CompilerAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Compiler}. 
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::compiler::java::JavaCompiler}]{\nogloxy{\texttt{JavaCompiler}}}\\
 questa classe è una implementazione di \texttt{Compiler} che permette di creare un jar dal codice sorgente Java.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::controller::RequestHandlerController}]{\nogloxy{\texttt{RequestHandlerController}}}\\
-questa classe si occupa di ricevere le richieste REST provenienti dal client.
-\end{itemize}
-\end{itemize}
-
-\subsubsubsection{\nogloxy{swedesigner::server::compiler::CompilerAssembler}}
-\label{\nogloxy{swedesigner::server::compiler::CompilerAssembler}}
-\begin{itemize}
-\item \textbf{Descrizione}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Compiler}. 
-\item \textbf{Utilizzo}\\
-viene utilizzata da \texttt{RequestHandlerController} che richiede ad essa una istanza di un'implementazione di \texttt{Compiler} del linguaggio configurato. È possibile realizzarlo tramite XML e il framework \spring{}. I dettagli dell'implementazione saranno esplicati nel documento \emph{Definizione di Prodotto}. % [RIFERIMENTO].
-\item \textbf{Relazioni con altre classi}:
-\begin{itemize}
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::compiler::Compiler}]{\nogloxy{\texttt{Compiler}}}\\
-questa interfaccia si occupa di fornire un oggetto compiler generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del compiler del linguaggio target desiderato.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::compiler::java::JavaCompiler}]{\nogloxy{\texttt{JavaCompiler}}}\\
-questa classe è una implementazione di \texttt{Compiler} che permette di creare un jar dal codice sorgente Java.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::controller::RequestHandlerController}]{\nogloxy{\texttt{RequestHandlerController}}}\\
 questa classe si occupa di ricevere le richieste REST provenienti dal client.
 \end{itemize}
 \end{itemize}
@@ -103,8 +91,6 @@ questa classe è una implementazione di \texttt{Compiler} che permette di creare
 viene utilizzata da \texttt{CompilerAssembler} che ritorna un' istanza di essa quando richiesto.
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::compiler::CompilerAssembler}]{\nogloxy{\texttt{CompilerAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Compiler}. 
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::compiler::Compiler}]{\nogloxy{\texttt{Compiler}}}\\
 questa interfaccia si occupa di fornire un oggetto compiler generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del compiler del linguaggio target desiderato.
 \end{itemize}
@@ -133,10 +119,6 @@ essa deve gestire la richiesta di generazione di un progetto (attraverso file JS
 Richiama in ordine le varie classi addette alla generazione del codice, ovvero: un \texttt{Parser}, un \texttt{Generator}, un \texttt{Compiler} e infine il \texttt{Compressor}. 
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::compiler::CompilerAssembler}]{\nogloxy{\texttt{CompilerAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Compiler}. 
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::generator::GeneratorAssembler}]{\nogloxy{\texttt{GeneratorAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Generator}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::compiler::Compiler}]{\nogloxy{\texttt{Compiler}}}\\
 questa interfaccia si occupa di fornire un oggetto compiler generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del compiler del linguaggio target desiderato.
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::generator::Generator}]{\nogloxy{\texttt{Generator}}}\\
@@ -177,34 +159,12 @@ questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a
 \begin{itemize}
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::controller::RequestHandlerController}]{\nogloxy{\texttt{RequestHandlerController}}}\\
 questa classe si occupa di ricevere le richieste REST provenienti dal client.
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::generator::GeneratorAssembler}]{\nogloxy{\texttt{GeneratorAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Generator}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::generator::java::JavaGenerator}]{\nogloxy{\texttt{JavaGenerator}}}\\
 questa classe è una implementazione di \texttt{Compiler} che permette di creare del codice sorgente Java da un \texttt{ParsedProgram}.
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::template::TemplateAssembler}]{\nogloxy{\texttt{TemplateAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Template}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}\\
 questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si specifica il metodo \texttt{RenderTemplate} che impone la necessità di implementarlo ad ogni classe sottostante.
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::template::Template}]{\nogloxy{\texttt{Template}}}\\
 questa interfaccia si occupa di fornire un oggetto template generico a chi lo richiede in modo da poter rendere estensibile il sistema aggiungendo un'implementazione concreta del template del linguaggio target desiderato.
-\end{itemize}
-\end{itemize}
-
-\subsubsubsection{\nogloxy{swedesigner::server::generator::GeneratorAssembler}}
-\label{\nogloxy{swedesigner::server::generator::GeneratorAssembler}}
-\begin{itemize}
-\item \textbf{Descrizione}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Generator}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
-\item \textbf{Utilizzo}\\
-viene utilizzata da \texttt{RequestHandlerController} che richiede ad essa una istanza di un'implementazione di \texttt{Generator} del linguaggio configurato.
-\item \textbf{Relazioni con altre classi}:
-\begin{itemize}
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::controller::RequestHandlerController}]{\nogloxy{\texttt{RequestHandlerController}}}\\
-questa classe si occupa di ricevere le richieste REST provenienti dal client.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::generator::Generator}]{\nogloxy{\texttt{Generator}}}\\
-questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::generator::java::JavaGenerator}]{\nogloxy{\texttt{JavaGenerator}}}\\
-questa classe è una implementazione di \texttt{Compiler} che permette di creare del codice sorgente Java da un \texttt{ParsedProgram}.
 \end{itemize}
 \end{itemize}
 \subsection{\nogloxy{swedesigner::server::generator::java}}
@@ -225,8 +185,6 @@ questa classe è una implementazione di \texttt{Compiler} che permette di creare
 viene utilizzata da \texttt{CompilerAssembler} che ritorna un' istanza di essa quando richiesto.
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::generator::GeneratorAssembler}]{\nogloxy{\texttt{GeneratorAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Generator}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::generator::Generator}]{\nogloxy{\texttt{Generator}}}\\
 questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
 \end{itemize}
@@ -274,28 +232,15 @@ Questo package contiene al suo interno le classi utili a rappresentare un proget
 \item \textbf{Padre}: \hyperref[\nogloxy{swedesigner::server}]{\nogloxy{\texttt{server}}}
 \end{itemize}
 \subsubsection{Classi}
-\subsubsubsection{\nogloxy{swedesigner::server::project::ParsedAssignment}}
-\label{\nogloxy{swedesigner::server::project::ParsedAssignment}}
-\begin{itemize}
-\item \textbf{Descrizione}\\
-questa classe descrive il comportamento di un blocco di assegnazione variabile.	
-\item \textbf{Utilizzo}\\
-dispone della possibilità di effettuare il render di un template in ingresso.
-\item \textbf{Classi ereditate}:
-\begin{itemize}
-\item \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}
-\end{itemize}
-\end{itemize}
-
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedAttribute}}
 \label{\nogloxy{swedesigner::server::project::ParsedAttribute}}
 \begin{itemize}
 \item \textbf{Descrizione}\\
-questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. 
+questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
 % Tuttavia, ciò non vale per attributi statici. 
 % Nella \emph{Definizione_di_prodotto_v_1_0_0} [RIFERIMENTO] sarà esplicitata l'implementazione di dettaglio decisa.
 \item \textbf{Utilizzo}\\
-questa classe è usata da \texttt{ParsedMethod} e \texttt{ParsedClass} (solamente le classi possono possedere attributi, non le interfacce).
+questa classe è usata da \texttt{ParsedMethod},  \texttt{ParsedClass} e \texttt{ParsedInterface} (le interfacce possono però contenere solo costanti di classe).
 Questa classe implementa l'interfaccia \texttt{ParsedElement}.
 Nota: Memorizzare il valore di questo attributo risulta superfluo, in quanto questo può essere impostato da un \texttt{ParsedAssignment}. 
 
@@ -303,6 +248,8 @@ Nota: Memorizzare il valore di questo attributo risulta superfluo, in quanto que
 \begin{itemize}
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedClass}]{\nogloxy{\texttt{ParsedClass}}}\\
 questa classe estende la classe astratta \texttt{ParsedType}, imponendo al suo interno la presenza di una lista di \texttt{ParsedAttribute}. 
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
+questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
 questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}\\
@@ -323,10 +270,14 @@ questa classe è creata tramite la \texttt{ElementFactory} durante il parsing de
 \end{itemize}
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedException}]{\nogloxy{\texttt{ParsedException}}}\\
+Questa classe rappresenta una eccezione che viene sollevata nel momento in cui viene identificata una illegalità nel parsing della stringa in formato .json
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedAttribute}]{\nogloxy{\texttt{ParsedAttribute}}}\\
-questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. 
+questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
 % Tuttavia, ciò non vale per attributi statici. 
 % Nella \emph{Definizione_di_prodotto_v_1_0_0} [RIFERIMENTO] sarà esplicitata l'implementazione di dettaglio decisa.
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
+questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \end{itemize}
 \end{itemize}
 
@@ -350,20 +301,55 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si specifica il metodo \texttt{RenderTemplate} che impone la necessità di implementarlo ad ogni classe sottostante.
 \item \textbf{Utilizzo}\\
 questa interfaccia è usata da \texttt{ElementFactory}, la quale fornisce un metodo per creare nuovi elementi secondo il design pattern Factory. %[RIFERIMENTO AD APPENDICE].
+\item \textbf{Sottoclassi}:
+\begin{itemize}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}
+\end{itemize}
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::generator::Generator}]{\nogloxy{\texttt{Generator}}}\\
 questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedAttribute}]{\nogloxy{\texttt{ParsedAttribute}}}\\
-questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. 
+questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
 % Tuttavia, ciò non vale per attributi statici. 
 % Nella \emph{Definizione_di_prodotto_v_1_0_0} [RIFERIMENTO] sarà esplicitata l'implementazione di dettaglio decisa.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}\\
 questa classe astratta rappresenta la singola istruzione contenuta all'interno di un metodo. Essa è estesa dalle istruzioni specifiche (e.g. \texttt{ParsedIf}, \texttt{ParsedWhile}, etc.)
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
 questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
+questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedType}]{\nogloxy{\texttt{ParsedType}}}\\
 questa classe astratta definisce un contratto comune tra le classi \texttt{ParsedInterface} e \texttt{ParsedClass}. 
+\end{itemize}
+\end{itemize}
+
+\subsubsubsection{\nogloxy{swedesigner::server::project::ParsedElse}}
+\label{\nogloxy{swedesigner::server::project::ParsedElse}}
+\begin{itemize}
+\item \textbf{Descrizione}\\
+questa classe descrive il comportamento di un blocco \texttt{else}.
+\item \textbf{Utilizzo}\\
+dispone della possibilità di effettuare il render di un template in ingresso.
+\item \textbf{Classi ereditate}:
+\begin{itemize}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}
+\end{itemize}
+\end{itemize}
+
+\subsubsubsection{\nogloxy{swedesigner::server::project::ParsedException}}
+\label{\nogloxy{swedesigner::server::project::ParsedException}}
+\begin{itemize}
+\item \textbf{Descrizione}\\
+Questa classe rappresenta una eccezione che viene sollevata nel momento in cui viene identificata una illegalità nel parsing della stringa in formato .json
+\item \textbf{Utilizzo}\\
+\texttt{ParsedInterface} solleva un'eccezione nel caso in cui venga identificata una illegalità nel parsing di una interfaccia. Inoltre \texttt{ParsedClass} solleva tale eccezione nel caso venga identificata una illegalità nel parsing di una classe.
+\item \textbf{Relazioni con altre classi}:
+\begin{itemize}
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedClass}]{\nogloxy{\texttt{ParsedClass}}}\\
+questa classe estende la classe astratta \texttt{ParsedType}, imponendo al suo interno la presenza di una lista di \texttt{ParsedAttribute}. 
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedInterface}]{\nogloxy{\texttt{ParsedInterface}}}\\
+questa classe estende la classe astratta \textt{ParsedType} ed ha bisogno soltanto della firma dei metodi essendo una classe che contiene informazioni riguardo un'interfaccia pura.
 \end{itemize}
 \end{itemize}
 
@@ -393,19 +379,6 @@ dispone della possibilità di effettuare il render di un template in ingresso.
 \end{itemize}
 \end{itemize}
 
-\subsubsubsection{\nogloxy{swedesigner::server::project::ParsedInitialize}}
-\label{\nogloxy{swedesigner::server::project::ParsedInitialize}}
-\begin{itemize}
-\item \textbf{Descrizione}\\
-questa classe descrive il comportamento di un blocco di inizializzazione variabile.
-\item \textbf{Utilizzo}\\
-dispone della possibilità di effettuare il render di un template in ingresso.
-\item \textbf{Classi ereditate}:
-\begin{itemize}
-\item \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}
-\end{itemize}
-\end{itemize}
-
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedInstruction}}
 \label{\nogloxy{swedesigner::server::project::ParsedInstruction}}
 \begin{itemize}
@@ -415,16 +388,18 @@ questa classe astratta rappresenta la singola istruzione contenuta all'interno d
 questa classe implementa l'interfaccia \texttt{ParsedElement}.
 \item \textbf{Sottoclassi}:
 \begin{itemize}
-\item \hyperref[\nogloxy{swedesigner::server::project::ParsedAssignment}]{\nogloxy{\texttt{ParsedAssignment}}}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedCustom}]{\nogloxy{\texttt{ParsedCustom}}}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedElse}]{\nogloxy{\texttt{ParsedElse}}}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedFor}]{\nogloxy{\texttt{ParsedFor}}}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedIf}]{\nogloxy{\texttt{ParsedIf}}}
-\item \hyperref[\nogloxy{swedesigner::server::project::ParsedInitialize}]{\nogloxy{\texttt{ParsedInitialize}}}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedReturn}]{\nogloxy{\texttt{ParsedReturn}}}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedStatement}]{\nogloxy{\texttt{ParsedStatement}}}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedWhile}]{\nogloxy{\texttt{ParsedWhile}}}
 \end{itemize}
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
+questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
 questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}\\
@@ -443,6 +418,13 @@ questa classe è creata tramite la \texttt{ElementFactory} durante il parsing de
 \begin{itemize}
 \item \hyperref[\nogloxy{swedesigner::server::project::ParsedType}]{\nogloxy{\texttt{ParsedType}}}
 \end{itemize}
+\item \textbf{Relazioni con altre classi}:
+\begin{itemize}
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedException}]{\nogloxy{\texttt{ParsedException}}}\\
+Questa classe rappresenta una eccezione che viene sollevata nel momento in cui viene identificata una illegalità nel parsing della stringa in formato .json
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedMethod}]{\nogloxy{\texttt{ParsedMethod}}}\\
+questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
+\end{itemize}
 \end{itemize}
 
 \subsubsubsection{\nogloxy{swedesigner::server::project::ParsedMethod}}
@@ -452,16 +434,32 @@ questa classe è creata tramite la \texttt{ElementFactory} durante il parsing de
 questa classe rappresenta un metodo come insieme di istruzioni \texttt{ParsedIstruction} e un insieme di \texttt{ParsedAttribute} come parametri del metodo.
 \item \textbf{Utilizzo}\\
 questa classe è usata da \texttt{ParsedType} come descritto in precedenza. La classe inoltre implementa l'interfaccia \texttt{ParsedElement}.
+\item \textbf{Classi ereditate}:
+\begin{itemize}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}
+\end{itemize}
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedClass}]{\nogloxy{\texttt{ParsedClass}}}\\
+questa classe estende la classe astratta \texttt{ParsedType}, imponendo al suo interno la presenza di una lista di \texttt{ParsedAttribute}. 
+\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedInterface}]{\nogloxy{\texttt{ParsedInterface}}}\\
+questa classe estende la classe astratta \textt{ParsedType} ed ha bisogno soltanto della firma dei metodi essendo una classe che contiene informazioni riguardo un'interfaccia pura.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::project::ParsedType}]{\nogloxy{\texttt{ParsedType}}}\\
 questa classe astratta definisce un contratto comune tra le classi \texttt{ParsedInterface} e \texttt{ParsedClass}. 
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedAttribute}]{\nogloxy{\texttt{ParsedAttribute}}}\\
-questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. 
+questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
+% Tuttavia, ciò non vale per attributi statici. 
+% Nella \emph{Definizione_di_prodotto_v_1_0_0} [RIFERIMENTO] sarà esplicitata l'implementazione di dettaglio decisa.
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedAttribute}]{\nogloxy{\texttt{ParsedAttribute}}}\\
+questa classe rappresenta un singolo attributo, memorizzando il nome della variabile, la sua visibilità e il suo valore di default. Viene utilizzata anche per rappresentare i parametri dei metodi.
 % Tuttavia, ciò non vale per attributi statici. 
 % Nella \emph{Definizione_di_prodotto_v_1_0_0} [RIFERIMENTO] sarà esplicitata l'implementazione di dettaglio decisa.
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}\\
 questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si specifica il metodo \texttt{RenderTemplate} che impone la necessità di implementarlo ad ogni classe sottostante.
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedElement}]{\nogloxy{\texttt{ParsedElement}}}\\
+questa classe descrive il contratto di un elemento generico \texttt{Parsed}. Si specifica il metodo \texttt{RenderTemplate} che impone la necessità di implementarlo ad ogni classe sottostante.
+\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}\\
+questa classe astratta rappresenta la singola istruzione contenuta all'interno di un metodo. Essa è estesa dalle istruzioni specifiche (e.g. \texttt{ParsedIf}, \texttt{ParsedWhile}, etc.)
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}\\
 questa classe astratta rappresenta la singola istruzione contenuta all'interno di un metodo. Essa è estesa dalle istruzioni specifiche (e.g. \texttt{ParsedIf}, \texttt{ParsedWhile}, etc.)
 \end{itemize}
@@ -488,6 +486,19 @@ questa classe astratta definisce un contratto comune tra le classi \texttt{Parse
 \begin{itemize}
 \item \textbf{Descrizione}\\
 questa classe descrive il comportamento di un blocco di ritorno di un metodo.
+\item \textbf{Utilizzo}\\
+dispone della possibilità di effettuare il render di un template in ingresso.
+\item \textbf{Classi ereditate}:
+\begin{itemize}
+\item \hyperref[\nogloxy{swedesigner::server::project::ParsedInstruction}]{\nogloxy{\texttt{ParsedInstruction}}}
+\end{itemize}
+\end{itemize}
+
+\subsubsubsection{\nogloxy{swedesigner::server::project::ParsedStatement}}
+\label{\nogloxy{swedesigner::server::project::ParsedStatement}}
+\begin{itemize}
+\item \textbf{Descrizione}\\
+questa classe descrive il comportamento di un blocco di assegnazione variabile o inizializzazione variabile.	
 \item \textbf{Utilizzo}\\
 dispone della possibilità di effettuare il render di un template in ingresso.
 \item \textbf{Classi ereditate}:
@@ -578,26 +589,6 @@ questa interfaccia si occupa di fornire un oggetto template generico a chi lo ri
 questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
 \item \textit{IN} \hyperref[\nogloxy{swedesigner::server::template::java::JavaTemplate}]{\nogloxy{\texttt{JavaTemplate}}}\\
 questa classe è una implementazione di \texttt{Template} che permette di fornire un template di una classe, metodo o costrutto Java.
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::template::TemplateAssembler}]{\nogloxy{\texttt{TemplateAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Template}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
-\end{itemize}
-\end{itemize}
-
-\subsubsubsection{\nogloxy{swedesigner::server::template::TemplateAssembler}}
-\label{\nogloxy{swedesigner::server::template::TemplateAssembler}}
-\begin{itemize}
-\item \textbf{Descrizione}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Template}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
-\item \textbf{Utilizzo}\\
-viene utilizzata da \texttt{RequestHandlerController} che richiede ad essa una istanza di \texttt{Template} del linguaggio configurato.
-\item \textbf{Relazioni con altre classi}:
-\begin{itemize}
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::generator::Generator}]{\nogloxy{\texttt{Generator}}}\\
-questa interfaccia si occupa di fornire un oggetto \texttt{Generator} generico a chi lo richiede in modo da poter rendere entensibile il sistema aggiungendo un'implementazione concreta del generator del linguaggio target desiderato.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::template::java::JavaTemplate}]{\nogloxy{\texttt{JavaTemplate}}}\\
-questa classe è una implementazione di \texttt{Template} che permette di fornire un template di una classe, metodo o costrutto Java.
-\item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::template::Template}]{\nogloxy{\texttt{Template}}}\\
-questa interfaccia si occupa di fornire un oggetto template generico a chi lo richiede in modo da poter rendere estensibile il sistema aggiungendo un'implementazione concreta del template del linguaggio target desiderato.
 \end{itemize}
 \end{itemize}
 \subsection{\nogloxy{swedesigner::server::template::java}}
@@ -618,8 +609,6 @@ questa classe è una implementazione di \texttt{Template} che permette di fornir
 viene utilizzata da \texttt{CompilerAssembler} che ritorna un' istanza di essa quando richiesto.
 \item \textbf{Relazioni con altre classi}:
 \begin{itemize}
-\item \textit{IN} \hyperref[\nogloxy{swedesigner::server::template::TemplateAssembler}]{\nogloxy{\texttt{TemplateAssembler}}}\\
-questa classe si occupa di creare delle istanze di tipi concreti di \texttt{Template}. È possibile realizzarlo tramite XML e il framework \spring. I dettagli dell'implementazione saranno spiegati nella \emph{Definizione di Prodotto}. % RIFERIMENTO
 \item \textit{OUT} \hyperref[\nogloxy{swedesigner::server::template::Template}]{\nogloxy{\texttt{Template}}}\\
 questa interfaccia si occupa di fornire un oggetto template generico a chi lo richiede in modo da poter rendere estensibile il sistema aggiungendo un'implementazione concreta del template del linguaggio target desiderato.
 \end{itemize}
@@ -653,11 +642,9 @@ questa classe si occupa di ricevere le richieste REST provenienti dal client.
 \end{itemize}
 
 \begin{adjustwidth}{-3cm}{-3cm}
-
-\begin{figure}[H]
-	\makebox[\textwidth][c]{
-	\includegraphics[width=0.9\textwidth]{img/server_pkg2}}
-	\caption{Diagramma package server}
-\end{figure}
-
+	\begin{figure}[H]
+		\makebox[\textwidth][c]{
+		\includegraphics[width=0.9\textwidth]{img/server_pkg2}}
+		\caption{Diagramma package server}
+	\end{figure}
 \end{adjustwidth}
