--- a/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
+++ b/Esterni/Specifica_tecnica/tex/packageClassiST-BE.tex
@@ -1,3 +1,9 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Componenti del back end
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 \subsection{\nogloxy{swedesigner::server}}
 \label{\nogloxy{swedesigner::server}}
 \subsubsection{Informazioni generali}
