--- a/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
+++ b/Esterni/Specifica_tecnica/tex/packageClassiST-FE.tex
@@ -1,3 +1,9 @@
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%  Componenti del front end
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+
 \subsection{\nogloxy{swedesigner::client}}
 \label{\nogloxy{swedesigner::client}}
 \subsubsection{Informazioni generali}
