aggiornate versioni + lettera

--- a/Esterni/Lettere/RQ.tex
+++ b/Esterni/Lettere/RQ.tex
@@ -12,7 +12,7 @@
 \usepackage{../../util/hx-vers}
 \date{Padova, \today}
 \signature{\MM\\Responsabile \hx{}\\
-\includegraphics[scale=1]{../Piano_di_progetto/img/firmamm.jpg}}
+\includegraphics[scale=1]{../Piano_di_progetto/img/firmamm.png}}
 
 \begin{document}
 
@@ -37,6 +37,7 @@ Le alleghiamo i seguenti documenti, che trattano in maniera approfondita gli asp
 	\item \ST;
 	\item \DP;
 	\item \Glossario;
+	\item \MU;
 	\item Verbali di riunione esterne:
 	\begin{itemize}
 		\item \emph{VE\_16-12-15.pdf};
