--- a/Interni/Norme_di_progetto/diario.tex
+++ b/Interni/Norme_di_progetto/diario.tex
@@ -2,7 +2,7 @@
 % da includere con \include{diario}
 
 \begin{diario}
-%	3.0.0 & {\AZ} (Responsabile) & 10/04/2017 & Approvazione del documento \\ \hline
+	3.0.0 & {\MM} (Responsabile) & 10/04/2017 & Approvazione del documento \\ \hline
 	2.2.0 & {\GG} (Verificatore) & 31/03/2017 & Verifica del documento \\ \hline
 	2.1.3 & {\PB} (Amministratore) & 31/03/2017 & Inserita sezione \ref{sec:integraz} \\ \hline
 	2.1.2 & {\LS} (Amministratore) & 30/03/2017 & Ampliate sezioni \ref{sec:design}, \ref{sec:an_dinam} e \ref{sec:efficienza} (in seguito a revisione di §2.3 del PdQ) \\ \hline
